updated terminal-jms